--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,21 @@
               "apps/enlight/src/favicon.ico",
               "apps/enlight/src/assets"
             ],
-            "styles": ["apps/enlight/src/styles.scss"],
-            "scripts": []
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "apps/enlight/src/styles.scss",
+              "apps/enlight/src/assets/scss/material-dashboard.scss"
+            ],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/popper.js/dist/umd/popper.js",
+              "node_modules/bootstrap-material-design/dist/js/bootstrap-material-design.min.js",
+              "node_modules/arrive/src/arrive.js",
+              "node_modules/moment/moment.js",
+              "node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js",
+              "node_modules/bootstrap-notify/bootstrap-notify.js",
+              "node_modules/chartist/dist/chartist.js"
+            ]
           },
           "configurations": {
             "production": {
