--- a/package.json
+++ b/package.json
@@ -40,7 +40,15 @@
     "@angular/router": "^8.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.4.0",
-    "zone.js": "^0.9.1"
+    "zone.js": "^0.9.1",
+    "jquery": "3.4.1",
+    "popper.js": "1.15.0",
+    "bootstrap-material-design": "4.1.2",
+    "arrive": "2.4.1",
+    "perfect-scrollbar": "1.1.0",
+    "bootstrap-notify": "3.1.3",
+    "chartist": "0.11.2",
+    "bootstrap": "4.3.1"
   },
   "devDependencies": {
     "@angular/cli": "8.3.3",
