--- a/package.json
+++ b/package.json
@@ -39,17 +39,17 @@
     "@angular/platform-browser": "^8.2.0",
     "@angular/platform-browser-dynamic": "^8.2.0",
     "@angular/router": "^8.2.0",
-    "@nrwl/angular": "^8.7.1",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.4.0",
-    "zone.js": "^0.9.1",
-    "@ngrx/store": "8.3.0",
     "@ngrx/effects": "8.3.0",
     "@ngrx/entity": "8.3.0",
-    "@ngrx/router-store": "8.3.0"
+    "@ngrx/router-store": "8.3.0",
+    "@ngrx/store": "8.3.0",
+    "@nrwl/angular": "^8.9.0",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.4.0",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.3",
+    "@angular-devkit/build-angular": "^0.803.20",
     "@angular/cli": "8.3.3",
     "@angular/compiler-cli": "^8.2.0",
     "@angular/language-service": "^8.2.0",
