--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
     "@angular/language-service": "^8.2.0",
     "@ngrx/schematics": "8.3.0",
     "@ngrx/store-devtools": "8.3.0",
-    "@nrwl/cypress": "8.7.1",
-    "@nrwl/jest": "8.7.1",
-    "@nrwl/workspace": "8.7.1",
+    "@nrwl/cypress": "^8.9.0",
+    "@nrwl/jest": "^8.9.0",
+    "@nrwl/workspace": "^8.9.0",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
     "codelyzer": "~5.0.1",
