--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@workspace/libs/ui": ["libs/ui/src/index.ts"],
       "@workspace/enlight/home": ["app/home/index.ts"],
-      "@workspace/libs/services": ["libs/services/src/index.ts"],
-      "@workspace/libs/utilities": ["libs/utilities/src/index.ts"]
+      "@workspace/libs/services": ["libs/services/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
