Moved few UI components to libs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "baseUrl": ".",
     "paths": {
       "@workspace/enlight/home": ["app/home/index.ts"],
-      "@workspace/libs/services": ["libs/services/src/index.ts"]
+      "@workspace/libs/services": ["libs/services/src/index.ts"],
+      "@workspace/ui": ["libs/ui/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
