Basic unit testing changes

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "nx": "nx",
     "start": "ng serve",
     "build": "ng build",
-    "test": "jest",
+    "test": "ng test",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "ng test --coverage",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
@@ -69,7 +69,7 @@
     "dotenv": "6.2.0",
     "eslint": "6.1.0",
     "jest": "24.1.0",
-    "jest-preset-angular": "^8.0.0",
+    "jest-preset-angular": "7.0.0",
     "prettier": "1.18.2",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
