--- a/package.json
+++ b/package.json
@@ -46,17 +46,10 @@
     "@ngrx/router-store": "8.3.0",
     "@ngrx/store": "8.3.0",
     "@nrwl/angular": "^8.9.0",
-    "@nrwl/node": "8.4.6",
     "core-js": "^2.5.4",
     "jest-html-reporter": "^2.8.0",
     "rxjs": "~6.4.0",
-    "zone.js": "^0.9.1",
-    "@nguniversal/hapi-engine": "7.1.1",
-    "hapi": "17.8.1",
-    "hapi-swagger": "9.4.2",
-    "h2o2": "8.1.2",
-    "log4js": "5.1.0",
-    "circular-json": "0.5.9"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.20",
@@ -80,15 +73,6 @@
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.5",
-    "@types/fs-extra": "5.0.4",
-    "@types/hammerjs": "2.0.36",
-    "@types/hapi": "17.8.2",
-    "@types/ioredis": "4.0.4",
-    "@types/jquery": "3.3.29",
-    "@types/lodash": "4.14.120",
-    "@types/mocha": "5.2.5",
-    "@types/request": "2.48.1",
-    "fs-extra": "7.0.0"
+    "typescript": "~3.4.5"
   }
 }
