Added Hapi configurations - Partial commit

--- a/nx.json
+++ b/nx.json
@@ -22,6 +22,12 @@
     },
     "pipes": {
       "tags": []
+    },
+    "shared-config": {
+      "tags": []
+    },
+    "hapi-utils-config": {
+      "tags": []
     }
   }
 }
