--- a/angular.json
+++ b/angular.json
@@ -219,6 +219,56 @@
           "styleext": "scss"
         }
       }
+    },
+    "shared-config": {
+      "root": "libs/shared/config",
+      "sourceRoot": "libs/shared/config/src",
+      "projectType": "library",
+      "schematics": {},
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/shared/config/tsconfig.lib.json",
+              "libs/shared/config/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!libs/shared/config/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/shared/config/jest.config.js",
+            "tsConfig": "libs/shared/config/tsconfig.spec.json"
+          }
+        }
+      }
+    },
+    "hapi-utils-config": {
+      "root": "libs/hapi/utils/config",
+      "sourceRoot": "libs/hapi/utils/config/src",
+      "projectType": "library",
+      "schematics": {},
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/hapi/utils/config/tsconfig.lib.json",
+              "libs/hapi/utils/config/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!libs/hapi/utils/config/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/hapi/utils/config/jest.config.js",
+            "tsConfig": "libs/hapi/utils/config/tsconfig.spec.json"
+          }
+        }
+      }
     }
   },
   "cli": {
