--- a/angular.json
+++ b/angular.json
@@ -269,6 +269,31 @@
           }
         }
       }
+    },
+    "hapi-utils-server": {
+      "root": "libs/hapi/utils/server",
+      "sourceRoot": "libs/hapi/utils/server/src",
+      "projectType": "library",
+      "schematics": {},
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/hapi/utils/server/tsconfig.lib.json",
+              "libs/hapi/utils/server/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!libs/hapi/utils/server/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/hapi/utils/server/jest.config.js",
+            "tsConfig": "libs/hapi/utils/server/tsconfig.spec.json"
+          }
+        }
+      }
     }
   },
   "cli": {
