--- a/package.json
+++ b/package.json
@@ -49,7 +49,12 @@
     "core-js": "^2.5.4",
     "jest-html-reporter": "^2.8.0",
     "rxjs": "~6.4.0",
-    "zone.js": "^0.9.1"
+    "zone.js": "^0.9.1",
+    "hapi": "17.8.1",
+    "hapi-swagger": "9.4.2",
+    "h2o2": "8.1.2",
+    "log4js": "5.1.0",
+    "circular-json": "0.5.9"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.20",
@@ -63,6 +68,7 @@
     "@nrwl/workspace": "^8.9.0",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
+    "@types/hapi": "17.8.2",
     "codelyzer": "~5.0.1",
     "cypress": "3.4.1",
     "dotenv": "6.2.0",
