--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "private": true,
   "dependencies": {
+    "express": "4.16.3",
     "@angular/animations": "^8.2.0",
     "@angular/cdk": "~8.2.3",
     "@angular/common": "^8.2.0",
@@ -39,6 +40,7 @@
     "@angular/forms": "^8.2.0",
     "@angular/material": "~8.2.3",
     "@angular/platform-browser": "^8.2.0",
+    "@angular/platform-server": "^7.0.0",
     "@angular/platform-browser-dynamic": "^8.2.0",
     "@angular/router": "^8.2.0",
     "@ngrx/effects": "8.3.0",
@@ -46,21 +48,28 @@
     "@ngrx/router-store": "8.3.0",
     "@ngrx/store": "8.3.0",
     "@nrwl/angular": "^8.9.0",
+    "acorn": "^7.1.0",
     "core-js": "^2.5.4",
     "jest-html-reporter": "^2.8.0",
     "rxjs": "~6.4.0",
-    "zone.js": "^0.9.1"
+    "zone.js": "^0.9.1",
+    "hapi": "^18.1.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.20",
-    "@angular/cli": "8.3.3",
-    "@angular/compiler-cli": "^8.2.0",
-    "@angular/language-service": "^8.2.0",
+    "ts-jest": "24.0.0",
+    "@types/express": "4.16.0",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "7.3.1",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular/language-service": "^7.0.0",
     "@ngrx/schematics": "8.3.0",
     "@ngrx/store-devtools": "8.3.0",
     "@nrwl/cypress": "^8.9.0",
     "@nrwl/jest": "^8.9.0",
     "@nrwl/workspace": "^8.9.0",
+    "@nrwl/builders": "7.7.2",
+    "@nrwl/schematics": "7.7.2",
+    "@types/hapi": "^18.0.1",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
     "codelyzer": "~5.0.1",
@@ -70,9 +79,8 @@
     "jest": "24.1.0",
     "jest-preset-angular": "7.0.0",
     "prettier": "1.18.2",
-    "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.5"
+    "typescript": "3.2.2"
   }
 }
