--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "jest-html-reporter": "^2.8.0",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1",
-    "hapi": "^18.1.0"
+    "hapi": "^18.1.0",
+    "axios": "0.19.0"
   },
   "devDependencies": {
     "ts-jest": "24.0.0",
