--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   },
   "private": true,
   "dependencies": {
-    "express": "4.16.3",
     "@angular/animations": "^8.2.0",
     "@angular/cdk": "~8.2.3",
     "@angular/common": "^8.2.0",
@@ -49,12 +48,14 @@
     "@ngrx/store": "8.3.0",
     "@nrwl/angular": "^8.9.0",
     "acorn": "^7.1.0",
+    "axios": "0.19.0",
     "core-js": "^2.5.4",
+    "express": "4.16.3",
+    "hapi": "^18.1.0",
+    "hapi-cors": "^1.0.3",
     "jest-html-reporter": "^2.8.0",
     "rxjs": "~6.4.0",
-    "zone.js": "^0.9.1",
-    "hapi": "^18.1.0",
-    "axios": "0.19.0"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "ts-jest": "24.0.0",
