--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@workspace/hapi/plugins/search": [
         "libs/hapi/plugins/search/src/index.ts"
       ],
-      "@workspace/models": ["libs/models/src/index.ts"]
+      "@workspace/models": ["libs/models/src/index.ts"],
+      "@workspace/constants": ["libs/constants/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
